--- a/venue-service/src/main/resources/application.properties
+++ b/venue-service/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=venue-service
+spring.datasource.url=jdbc:postgresql://localhost:5432/venue-db
+spring.datasource.username=root
+spring.datasource.password=secret
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
+grpc.server.port: 9090
