--- a/venue-service/build.gradle
+++ b/venue-service/build.gradle
@@ -8,6 +8,8 @@ group = 'com.bingebox'
 version = '0.0.1-SNAPSHOT'
 
 java {
+	sourceCompatibility = JavaVersion.VERSION_21
+	targetCompatibility = JavaVersion.VERSION_21
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(21)
 	}
@@ -23,7 +25,13 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	grpcVersion = '1.62.2'
+	springGrpcVersion = '3.1.0.RELEASE'
+}
+
 dependencies {
+	implementation project(":commons")
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.flywaydb:flyway-core'
@@ -36,4 +44,7 @@ dependencies {
 	testImplementation 'org.testcontainers:junit-jupiter'
 	testImplementation 'org.testcontainers:postgresql'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation "net.devh:grpc-server-spring-boot-starter:$springGrpcVersion"
+	testImplementation "net.devh:grpc-client-spring-boot-starter:$springGrpcVersion"
 }
