--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -24,6 +24,7 @@ ext {
 }
 
 dependencies {
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation "io.grpc:grpc-stub:$grpcVersion"
     implementation "io.grpc:grpc-protobuf:$grpcVersion"
     implementation "com.google.protobuf:protobuf-java:$protobufVersion"
