feat(discovery-service): inter service communication

--- a/event-service/build.gradle
+++ b/event-service/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.4.4'
-	id 'io.spring.dependency-management' version '1.1.7'
+	id 'org.springframework.boot' version '3.2.5'
+	id 'io.spring.dependency-management' version '1.1.4'
 }
 
 group = 'com.bingebox'
@@ -23,6 +23,17 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	springGrpcVersion = '2.15.0.RELEASE'
+	springCloudVersion = '2023.0.0'
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
+}
+
 dependencies {
 	// Internal module
 	implementation project(":commons")
@@ -33,8 +44,7 @@ dependencies {
 
 	// Database + Migration
 	runtimeOnly 'org.postgresql:postgresql'
-	implementation 'org.flywaydb:flyway-core'
-	implementation 'org.flywaydb:flyway-database-postgresql'
+	implementation 'org.flywaydb:flyway-core:9.16.0'
 
 	// Lombok
 	compileOnly 'org.projectlombok:lombok'
@@ -46,6 +56,12 @@ dependencies {
 	testImplementation 'org.testcontainers:junit-jupiter'
 	testImplementation 'org.testcontainers:postgresql'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation "net.devh:grpc-server-spring-boot-starter:$springGrpcVersion"
+	testImplementation "net.devh:grpc-client-spring-boot-starter:$springGrpcVersion"
+	
+	// Spring Cloud
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 }
 
 tasks.withType(Test).configureEach {
