--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ rootProject.name = 'bingebox-monorepo'
 include 'event-service'
 include 'venue-service'
 include 'commons'
+include 'discovery-service'
 
 
 dependencyResolutionManagement {
