--- a/event-service/src/main/resources/application.properties
+++ b/event-service/src/main/resources/application.properties
@@ -1,8 +1,24 @@
 spring.application.name=event-service
-spring.datasource.url=jdbc:postgresql://localhost:5432/event-db
+server.port=8081
+
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/event_service
 spring.datasource.username=root
 spring.datasource.password=secret
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
-spring.port=8081
+# Flyway Configuration
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-version=0
+
+# Eureka Client Configuration
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.preferIpAddress=true
+
+# Docker Profile
+spring.config.activate.on-profile=docker
+spring.datasource.url=jdbc:postgresql://event-db:5432/event_service
+eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka/
