--- a/venue-service/src/main/resources/application.properties
+++ b/venue-service/src/main/resources/application.properties
@@ -1,8 +1,28 @@
 spring.application.name=venue-service
-spring.datasource.url=jdbc:postgresql://localhost:5432/venue-db
+server.port=8082
+
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/venue_service
 spring.datasource.username=root
 spring.datasource.password=secret
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
-grpc.server.port: 9090
+# Flyway Configuration
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-version=0
+
+# gRPC Configuration
+grpc.server.port=9090
+
+# Eureka Client Configuration
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.preferIpAddress=true
+eureka.instance.metadata-map.grpc.port=${grpc.server.port}
+
+# Docker Profile
+spring.config.activate.on-profile=docker
+spring.datasource.url=jdbc:postgresql://venue-db:5432/venue_service
+eureka.client.serviceUrl.defaultZone=http://discovery-service:8761/eureka/
