--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation "io.grpc:grpc-stub:$grpcVersion"
     implementation "io.grpc:grpc-protobuf:$grpcVersion"
+    implementation "io.grpc:grpc-core:$grpcVersion"
+    implementation "io.grpc:grpc-netty-shaded:$grpcVersion"
     implementation "com.google.protobuf:protobuf-java:$protobufVersion"
 }
 
