--- a/event-service/src/main/resources/application.properties
+++ b/event-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=event-service
-server.port=8081
+server.port=8084
 
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5433/event_service
@@ -14,6 +14,10 @@ spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-version=0
 
+# gRPC Configuration
+grpc.server.port=9091
+
 # Eureka Client Configuration
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.preferIpAddress=true
+eureka.instance.metadata-map.grpc.port=${grpc.server.port}
