feat(booking-service): setup done

--- a/booking-service/src/main/resources/application.properties
+++ b/booking-service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=event-service
-server.port=8081
+spring.application.name=booking-service
+server.port=8083
 
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5433/event_db
+spring.datasource.url=jdbc:postgresql://localhost:5434/booking_service
 spring.datasource.username=root
 spring.datasource.password=secret
 spring.jpa.hibernate.ddl-auto=none
@@ -15,7 +15,7 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-version=0
 
 # gRPC Configuration
-grpc.server.port=9091
+grpc.server.port=9090
 
 # Eureka Client Configuration
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
