--- a/venue-service/src/main/resources/application.properties
+++ b/venue-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=venue-service
 server.port=8082
 
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5434/venue_service
+spring.datasource.url=jdbc:postgresql://localhost:5434/venue_db
 spring.datasource.username=root
 spring.datasource.password=secret
 spring.jpa.hibernate.ddl-auto=none
